Fix slash command pill alignment (#188964)

--- a/src/vs/workbench/contrib/chat/browser/chatSlashCommandContentWidget.css
+++ b/src/vs/workbench/contrib/chat/browser/chatSlashCommandContentWidget.css
@@ -4,8 +4,9 @@
  *--------------------------------------------------------------------------------------------*/
 
 .chat-slash-command-content-widget {
-	padding: 0 0.4em;
-	border-radius: 3px;
+	padding: 0.1em 0.3em;
+	top: 7px !important;
+	border-radius: 2px;
 	background-color: var(--vscode-textCodeBlock-background);
 	color: var(--vscode-textLink-foreground);
 }
